V2: code refactored for service layer